# Qbackend

./: .gitignore  CMakeLists.txt  Makefile.am  autogen.sh  configure.ac
build-env/android/: sdk.env
build-env/arm/: Dockerfile  builder.sh  runner.sh
src/: Makefile.am  Qbackend.pc.in  qbackend_library.cmake
src/audio/: audio_engine_compenent.cmake
src/curl/: curl_engine.cpp  curl_engine.hpp  curl_engine_compenent.cmake
src/json/: json_engine.cpp  json_engine.hpp  json_engine_compenent.cmake
src/model/: lang_translation.cpp  lang_translation.hpp  model_compenent.cmake  settings.cpp  settings.hpp  translation.cpp  translation.hpp  translations.cpp  translations.hpp
src/net/: CMakeLists.txt  net_compenent.cmake  sock.py  stun-client.cpp  stun-client.py  stun-server.py  stun_client.cpp  stun_client.hpp  udp_client.c
src/qrcode/: qrcode_engine.cpp  qrcode_engine.hpp  qrcode_engine_compenent.cmake
src/ssl/: ssl_compenent.cmake  ssl_engine.cpp  ssl_engine.hpp
src/storage/: storage_engine.cpp  storage_engine.hpp  storage_engine_compenent.cmake
src/web/: web_engine.cpp  web_engine.hpp  web_engine_compenent.cmake
src/xml/: xml_engine_compenent.cmake
test/: Makefile.am  backend_test.cpp  backend_test_program.cmake  example.json
test/model/: lang_translation.cpp  lang_translation.hpp  qmodel_compenent.cmake  translation.cpp  translation.hpp  translations.cpp  translations.hpp
